update template yaml

--- a/.bunnyshell/templates/azcopy-seeder/template.yaml
+++ b/.bunnyshell/templates/azcopy-seeder/template.yaml
@@ -21,3 +21,4 @@ variables:
   - description: 'The path to download the files/folders in the target'
     name: 'DOWNLOAD_PATH'
     type: 'string'
+discoverable: true
